feat: feat: add jing-calendar submodule
Signed-off-by: wangrui <wangrui@jingos.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "framework/jing-kwin"]
 	path = framework/jing-kwin
 	url = https://github.com/JingOS-team/jing-kwin.git
+[submodule "apps/jing-calendar"]
+	path = apps/jing-calendar
+	url = https://github.com/JingOS-team/jing-calendar
