--- a/.gitmodules
+++ b/.gitmodules
@@ -1,45 +1,90 @@
-[submodule "apps/jing-media-player"]
-	path = apps/jing-media-player
-	url = https://github.com/JingOS-team/jing-media-player.git
-[submodule "apps/jing-haruna"]
-	path = apps/jing-haruna
-	url = https://github.com/JingOS-team/jing-haruna.git
-[submodule "apps/jing-photos"]
-	path = apps/jing-photos
-	url = https://github.com/JingOS-team/jing-photos.git
-[submodule "apps/jing-krecorder"]
-	path = apps/jing-krecorder
-	url = https://github.com/JingOS-team/jing-krecorder.git
-[submodule "apps/jing-kalk"]
-	path = apps/jing-kalk
-	url = https://github.com/JingOS-team/jing-kalk.git
-[submodule "apps/jing-kclock"]
-	path = apps/jing-kclock
-	url = https://github.com/JingOS-team/jing-kclock.git
-[submodule "framework/jing-kirigami"]
-	path = framework/jing-kirigami
-	url = https://github.com/JingOS-team/jing-kirigami.git
-[submodule "framework/jing-kwin"]
-	path = framework/jing-kwin
-	url = https://github.com/JingOS-team/jing-kwin.git
-[submodule "apps/jing-calendar"]
-	path = apps/jing-calendar
-	url = https://github.com/JingOS-team/jing-calendar
-[submodule "systemui/jing-plasma-phone-components"]
-	path = systemui/jing-plasma-phone-components
-	url = https://github.com/JingOS-team/jing-plasma-phone-components
-[submodule "framework/jing-plasma-workspace"]
-	path = framework/jing-plasma-workspace
-	url = https://github.com/JingOS-team/jing-plasma-workspace
-[submodule "apps/jing-appstore"]
-	path = apps/jing-appstore
-	url = https://github.com/JingOS-team/jing-appstore
-[submodule "apps/jing-filemanager"]
-	path = apps/jing-filemanager
-	url = https://github.com/JingOS-team/jing-filemanager
-[submodule "apps/jing-settings"]
-	path = apps/jing-settings
-	url = https://github.com/JingOS-team/jing-settings
-[submodule "apps/jing-nm"]
-	path = apps/jing-nm
-	url = https://github.com/JingOS-team/jing-nm
+[submodule "apps/mauikit"]
+	path = apps/mauikit
+	url = https://github.com/JingOS-team/mauikit
+[submodule "apps/qaptupdator"]
+	path = apps/qaptupdator
+	url = https://github.com/JingOS-team/qaptupdator
+[submodule "apps/powerdevil"]
+	path = apps/powerdevil
+	url = https://github.com/JingOS-team/powerdevil
+[submodule "apps/plasma-nm"]
+	path = apps/plasma-nm
+	url = https://github.com/JingOS-team/plasma-nm
+[submodule "apps/bluedevil"]
+	path = apps/bluedevil
+	url = https://github.com/JingOS-team/bluedevil
+[submodule "apps/calendar"]
+	path = apps/calendar
+	url = https://github.com/JingOS-team/calendar
+[submodule "apps/appstore"]
+	path = apps/appstore
+	url = https://github.com/JingOS-team/appstore
+[submodule "apps/camera"]
+	path = apps/camera
+	url = https://github.com/JingOS-team/camera
+[submodule "apps/recorder"]
+	path = apps/recorder
+	url = https://github.com/JingOS-team/recorder
+[submodule "apps/photo"]
+	path = apps/photo
+	url = https://github.com/JingOS-team/photo
+[submodule "apps/mediaplayer"]
+	path = apps/mediaplayer
+	url = https://github.com/JingOS-team/mediaplayer
+[submodule "apps/clock"]
+	path = apps/clock
+	url = https://github.com/JingOS-team/clock
+[submodule "apps/calculator"]
+	path = apps/calculator
+	url = https://github.com/JingOS-team/calculator
+[submodule "apps/filemanager"]
+	path = apps/filemanager
+	url = https://github.com/JingOS-team/filemanager
+[submodule "apps/videoplayer"]
+	path = apps/videoplayer
+	url = https://github.com/JingOS-team/videoplayer
+[submodule "apps/settings"]
+	path = apps/settings
+	url = https://github.com/JingOS-team/settings
+[submodule "apps/plasma-desktop"]
+	path = apps/plasma-desktop
+	url = https://github.com/JingOS-team/plasma-desktop
+[submodule "framework/kwin"]
+	path = framework/kwin
+	url = https://github.com/JingOS-team/kwin
+[submodule "framework/kwayland"]
+	path = framework/kwayland
+	url = https://github.com/JingOS-team/kwayland
+[submodule "framework/kwayland-server"]
+	path = framework/kwayland-server
+	url = https://github.com/JingOS-team/kwayland-server
+[submodule "framework/plasma-wayland-protocols"]
+	path = framework/plasma-wayland-protocols
+	url = https://github.com/JingOS-team/plasma-wayland-protocols
+[submodule "systemui/polkit-kde-agent-1"]
+	path = systemui/polkit-kde-agent-1
+	url = https://github.com/JingOS-team/polkit-kde-agent-1
+[submodule "systemui/kscreenlocker"]
+	path = systemui/kscreenlocker
+	url = https://github.com/JingOS-team/kscreenlocker
+[submodule "systemui/kscreen"]
+	path = systemui/kscreen
+	url = https://github.com/JingOS-team/kscreen
+[submodule "systemui/qapt"]
+	path = systemui/qapt
+	url = https://github.com/JingOS-team/qapt
+[submodule "systemui/plasma-framework"]
+	path = systemui/plasma-framework
+	url = https://github.com/JingOS-team/plasma-framework
+[submodule "systemui/plasma-nano"]
+	path = systemui/plasma-nano
+	url = https://github.com/JingOS-team/plasma-nano
+[submodule "systemui/plasma-phone-components"]
+	path = systemui/plasma-phone-components
+	url = https://github.com/JingOS-team/plasma-phone-components
+[submodule "systemui/plasma-workspace"]
+	path = systemui/plasma-workspace
+	url = https://github.com/JingOS-team/plasma-workspace
+[submodule "systemui/controlkit"]
+	path = systemui/controlkit
+	url = https://github.com/JingOS-team/controlkit
